--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 /* line 11, ../../app/learningApps-org/base/_base.scss */
 body, html {
   background-image: none !important;
-  font-family: monospace !important;
+  font-family: sans-serif !important;
 }
 
 /* line 15, ../../app/learningApps-org/base/_base.scss */
@@ -35,8 +35,8 @@ body {
 
 /* line 23, ../../app/learningApps-org/base/_typography.scss */
 h1, h2, h3, h4, h5, h6 {
-  font-family: monospace !important;
-  font-weight: normal!important;
+    font-family: sans-serif !important;
+    font-weight: normal!important;
 }
 
 /* body */
