--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ h1, h2, h3, h4, h5, h6 {
    
 /* modal */
 .field {
+  paddinh:4px !important;
   border: 1px solid var(--light-gray-10)!important;
   vertical-align: middle!important;
   text-align: center!important;
@@ -197,9 +198,6 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-#checkSolutionBtn{
-  display: none !important;
-}
 #AppClientTaskButton a img{
   display: none !important;
 }
@@ -298,7 +296,3 @@ h1, h2, h3, h4, h5, h6 {
     background: linear-gradient(to bottom, var(--white),var(--black));
 }
 
-/* display none of full screen */
-#AppClientFullscreenButton{
-    display: none !important;
-}
